fix(dedicated): add vps secondary dns
 Hide error message while cancelling add vps secondary dns
 ref: DTRSD-96916

Signed-off-by: Anoop <anooparveti@gmail.com>
Signed-off-by: Anoop <anoop.n@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/name-edition/name-edition.html
+++ b/packages/manager/apps/dedicated/client/app/components/name-edition/name-edition.html
@@ -1,12 +1,9 @@
 <div class="oui-modal oui-modal_shadow">
-    <form
-        name="updateNameForm"
-        novalidate
-        data-ng-submit="$ctrl.updateDescription()"
-    >
+    <form name="updateNameForm" novalidate>
         <oui-modal
             data-primary-label="{{ :: 'common_change' | translate }}"
             data-primary-disabled="updateNameForm.$invalid"
+            data-primary-action="$ctrl.updateDescription()"
             data-secondary-label="{{ :: 'common_cancel' | translate }}"
             data-secondary-action="$ctrl.$uibModalInstance.dismiss()"
             data-on-dismiss="$ctrl.$uibModalInstance.dismiss()"
