--- a/packages/manager/modules/pci/src/projects/new/index.scss
+++ b/packages/manager/modules/pci/src/projects/new/index.scss
@@ -29,6 +29,10 @@ pci-project-new {
       padding: 0 200px;
     }
 
+    .promotion-banner-container {
+      margin: auto;
+    }
+
     .oui-field .oui-field__label {
       font-size: 12px;
       font-weight: bold;
