--- a/packages/manager/modules/pci/src/projects/new/components/pci-new-project-promotion-banner/template.html
+++ b/packages/manager/modules/pci/src/projects/new/components/pci-new-project-promotion-banner/template.html
@@ -1,10 +1,7 @@
 <div class="pci-new-project-promotion-banner" data-ng-if="$ctrl.voucher.valid">
-    <oui-tile
-        class="promotion-banner"
-        data-heading="{{ 'pci_project_promotion_banner_title' | translate }}"
-    >
+    <oui-tile class="promotion-banner">
         <h5
-            data-translate="pci_project_promotion_banner_promotion"
+            data-translate="pci_project_promotion_banner_title"
             data-translate-values="{ credit: $ctrl.voucher.credit.text }"
         ></h5>
         <p data-translate="pci_project_promotion_banner_description"></p>
