feat: support additional disk in order funnel
DATATR-113

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.scss
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.scss
@@ -1,3 +1,25 @@
 .order-summary {
   z-index: 1009;
 }
+
+tr.table-single-select-row {
+  cursor: pointer;
+}
+tr.table-single-select-row:hover {
+  background-color: #bef1ff;
+}
+.table-selected {
+  background-color: #def8ff;
+}
+.table-selected > td {
+  font-weight: 800 !important;
+}
+.table-single-select-row > td {
+  cursor: pointer !important;
+}
+
+oui-field.no-bottom-margin {
+  .oui-field {
+    margin-bottom: 0;
+  }
+}
