--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/plans-list/plans-list.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/plans-list/plans-list.html
@@ -89,14 +89,14 @@
                 data-translate="pci_database_common_price_starts_from"
             ></span>
             <ovh-manager-catalog-price
-                data-price="plan.minHourlyPrice.priceInUcents"
-                data-tax="plan.minHourlyPrice.tax"
+                data-price="plan[$ctrl.showMonthlyPrices ? 'minMonthlyPrice' : 'minHourlyPrice'].priceInUcents"
+                data-tax="plan[$ctrl.showMonthlyPrices ? 'minMonthlyPrice' : 'minHourlyPrice'].tax"
                 data-user="$ctrl.user"
                 data-show-zero-price="true"
             >
             </ovh-manager-catalog-price>
             <strong
-                data-translate="pci_database_plans_list_spec_price_unit"
+                data-ng-bind="($ctrl.showMonthlyPrices ? 'pci_database_plans_list_spec_price_unit_month' : 'pci_database_plans_list_spec_price_unit_hour') | translate"
             ></strong>
         </oui-select-picker-section>
     </oui-select-picker>
