--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/flavors-list.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/flavors-list.html
@@ -1,4 +1,7 @@
-<table class="table table-bordered">
+<table
+    class="table table-bordered"
+    summary="{{:: 'pci_database_flavors_list_table_description' | translate}}"
+>
     <thead>
         <tr>
             <th data-translate="pci_database_flavors_list_header_type"></th>
