--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/flavors-list.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/flavors-list.html
@@ -1,7 +1,8 @@
-<table
-    class="table table-bordered"
-    summary="{{:: 'pci_database_flavors_list_table_description' | translate}}"
->
+<table class="table table-bordered">
+    <caption
+        class="d-none"
+        data-translate="pci_database_flavors_list_table_description"
+    ></caption>
     <thead>
         <tr>
             <th data-translate="pci_database_flavors_list_header_type"></th>
