fix: keep the prices display consistent
DATATR-46

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/plans-list/plans-list.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/plans-list/plans-list.html
@@ -93,6 +93,8 @@
                 data-tax="plan[$ctrl.showMonthlyPrices ? 'minMonthlyPrice' : 'minHourlyPrice'].tax"
                 data-user="$ctrl.user"
                 data-show-zero-price="true"
+                data-perform-rounding="false"
+                data-maximum-fraction-digits="3"
             >
             </ovh-manager-catalog-price>
             <strong
