fix: pr comments
DATATR-46

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/style.scss
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/style.scss
@@ -1,5 +1,5 @@
 @import '@ovh-ux/ui-kit/dist/scss/tokens/_colors';
-database-flavors-list {
+pci-projects-project-database-flavors-list {
   tr.table-single-select-row {
     td {
       cursor: pointer !important;
