--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/disk-size/disk-size.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/disk-size/disk-size.html
@@ -2,7 +2,7 @@
     <div
         data-ng-class="{
         'col-12': !$ctrl.showPrices,
-        'col-sm-9 col-md-10': $ctrl.showPrices
+        'col-sm-9': $ctrl.showPrices
     }"
     >
         <div class="d-flex justify-content-between">
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div
-        class="col-sm-3 col-md-2 d-flex align-items-center flex-wrap"
+        class="col-sm-3 d-flex align-items-center flex-wrap"
         data-ng-if="$ctrl.showPrices"
     >
         <ovh-manager-catalog-price
