--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.scss
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.scss
@@ -1,13 +1,15 @@
-.order-summary {
-  z-index: 1009;
-}
-
-oui-field.no-bottom-margin {
-  .oui-field {
-    margin-bottom: 0;
+pci-project-storages-databases-add {
+  .order-summary {
+    z-index: 1009;
   }
-}
 
-.oui-tile__description {
-  word-break: break-word;
+  oui-field.no-bottom-margin {
+    .oui-field {
+      margin-bottom: 0;
+    }
+  }
+
+  .oui-tile__description {
+    word-break: break-word;
+  }
 }
