--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/style.scss
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-storage/style.scss
@@ -1,8 +1,10 @@
-// avoid translation menu getting below summary
-.order-summary {
-  z-index: 1009;
-}
+ovh-manager-pci-project-database-general-information-upgrade-storage {
+  // avoid translation menu getting below summary
+  .order-summary {
+    z-index: 1009;
+  }
 
-.oui-tile__description {
-  word-break: break-word;
+  .oui-tile__description {
+    word-break: break-word;
+  }
 }
