--- a/packages/manager/modules/sign-up/src/components/siret/siret.html
+++ b/packages/manager/modules/sign-up/src/components/siret/siret.html
@@ -145,9 +145,15 @@
             icon-left="{{ $ctrl.mode === 'modification' ? 'oui-icon-search' : 'oui-icon-arrow-left' }}"
             data-on-click="$ctrl.goToSearchMode()"
         >
-            <span data-translate="{{ $ctrl.mode === 'modification' ? 'siret_update_search_assistant' : 'siret_search_assistant' }}"></span>
+            <span
+                data-translate="{{ $ctrl.mode === 'modification' ? 'siret_update_search_assistant' : 'siret_search_assistant' }}"
+            ></span>
         </oui-button>
-        <p data-ng-if="$ctrl.mode !== 'modification'" class="mt-2" data-translate="siret_manual_title"></p>
+        <p
+            data-ng-if="$ctrl.mode !== 'modification'"
+            class="mt-2"
+            data-translate="siret_manual_title"
+        ></p>
 
         <div class="row mt-2">
             <oui-field
