fix(dedicated.account): fix madatory rule on phone field
ref: MANAGER-10617

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/field/new-account-form-field-component.html
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/field/new-account-form-field-component.html
@@ -113,7 +113,7 @@
                 data-ng-attr-name="{{ 'ovh_field_' + $ctrl.rule.fieldName }}"
                 data-ng-model="$ctrl.value"
                 data-ng-model-options="{ debounce: $ctrl.debounce }"
-                data-ng-required="$ctrl.rules.mandatory"
+                data-ng-required="$ctrl.rule.mandatory"
                 data-ng-attr-placeholder="{{ $ctrl.phonePlaceHolder }}"
                 data-ng-change="$ctrl.onChange()"
                 data-ng-focus="$ctrl.focused = true"
