--- a/packages/manager/modules/pci/src/components/project-quota-exceed-error-modal/template.html
+++ b/packages/manager/modules/pci/src/components/project-quota-exceed-error-modal/template.html
@@ -5,9 +5,9 @@
     novalidate
 >
     <oui-modal
-        data-primary-label="{{ ::$ctrl.submitLabel }}"
+        data-primary-label="{{:: $ctrl.submitLabel }}"
         data-secondary-action="$ctrl.goBack()"
-        data-secondary-label="{{ ::'pci_project_new_error_cancel' | translate }}"
+        data-secondary-label="{{:: $ctrl.cancelLabel }}"
         data-on-dismiss="$ctrl.goBack()"
         data-type="error"
     >
