fix(storage.cold-archive): adjust size field inputs in add archive view
ref: MANAGER-10605
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/name-archive/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/name-archive/template.html
@@ -2,6 +2,7 @@
     <!--archive name field-->
     <oui-field
         class="mb-2"
+        data-size="xl"
         data-label="{{:: 'pci_projects_project_storages_cold_archive_add_step_name_archive_field_name' | translate}}"
         data-help-text="{{ ::'pci_projects_project_storages_cold_archive_add_step_name_archive_description' | translate }}"
     >
