fix(dedicated.ip): display quota error on order page
 ref: DTRSD-103817

Signed-off-by: Anoop <anoop.n@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/ip/agoraOrder/ip-ip-agoraOrder.html
+++ b/packages/manager/apps/dedicated/client/app/components/ip/agoraOrder/ip-ip-agoraOrder.html
@@ -6,6 +6,7 @@
     </oui-header>
     <!--return to dashboard-->
     <oui-back-button data-on-click="$ctrl.resumeOrder()"> </oui-back-button>
+    <div data-ovh-alert="{{:: $ctrl.ALERT_ID}}"></div>
     <oui-stepper
         data-current-index="$ctrl.currentStep"
         data-on-finish="$ctrl.redirectToPaymentPage()"
