feat: rework fork page with pit options
datatr-157

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/flavors-list.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/flavors-list.html
@@ -51,6 +51,12 @@
                 data-maximum-fraction-digits="3"
             >
             </ovh-manager-catalog-price>
+
+            <span
+                class="oui-badge oui-badge_s oui-badge_success"
+                data-ng-if="$ctrl.currentFlavor.id === flavor.id"
+                data-translate="pci_database_flavors_list_current_offer"
+            ></span>
         </td>
     </tr>
 </table>
