fix(sign-up): fix one attribute for tracking on siret module
ref: MANAGER-8600

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sign-up/src/components/siret/siret.html
+++ b/packages/manager/modules/sign-up/src/components/siret/siret.html
@@ -173,8 +173,7 @@
                     data-items="$ctrl.legalFormList"
                     data-name="corporationType"
                     data-model="$ctrl.model.corporationType"
-                    data-ng-required="$ctrl.rules.corporationType.mandatory"
-                    data-ng-blur="$ctrl.onFieldBlur($ctrl.formCtrl.siretForm.corporationType)"
+                    data-on-blur="$ctrl.onFieldBlur($ctrl.formCtrl.siretForm.corporationType)"
                     data-required
                 >
                 </oui-select>
