fix(dedicated.ip): add tag for additional ip ip blocks
ref:MANAGER-10324

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/components/list/list.html
+++ b/packages/manager/apps/dedicated/client/app/ip/components/list/list.html
@@ -260,7 +260,7 @@
                         class="oui-badge oui-badge_info"
                     ></span>
                     <span
-                        data-ng-if="showFOBadge && ipBlock.type == 'FAILOVER'"
+                        data-ng-if="showFOBadge && (ipBlock.type == 'FAILOVER' || ipBlock.type == 'VRACK' || ( ipBlock.version =='IPV4' && ipBlock.type == 'PCC')) "
                         data-ng-bind=":: ADDITIONAL_IP"
                         class="oui-badge oui-badge_info"
                     ></span>
