fix(pci.instance): fix the variable for cpu or vcpu
ref: MANAGER-10452

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/pci/src/components/project/flavors-list/flavors-list.html
+++ b/packages/manager/modules/pci/src/components/project/flavors-list/flavors-list.html
@@ -52,7 +52,7 @@
                                 data-ng-if="flavor.technicalBlob.cpu.model"
                             >
                                 <span
-                                    data-translate="pci_project_flavors_spec_{{ flavor.technicalBlob.cpu.model }}_details"
+                                    data-translate="pci_project_flavors_spec_{{ flavor.technicalBlob.cpu.type }}_details"
                                     data-translate-values="{ vcores: flavor.technicalBlob.cpu.cores, frequency: flavor.technicalBlob.cpu.frequency }"
                                 ></span>
                             </div>
