fix(storage.cold-archive): fix max length for new user input
ref: MANAGER-10605
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/components/steps/link-user-archive/template.html
@@ -112,6 +112,7 @@
     <div data-ng-if="$ctrl.isCreateMode()">
         <!--User input value-->
         <oui-field
+            data-size="xl"
             data-ng-if="!$ctrl.userModel.createMode.credential"
             data-label="{{:: 'pci_projects_project_storages_cold_archive_add_step_link_user_archive_user_description_label' | translate }}"
         >
