fix(telecom): display correct international numbers
ref: DTRSD-104063

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/telecom/src/app/telecom/telephony/billingAccount/orderAlias/international/international.html
+++ b/packages/manager/apps/telecom/src/app/telecom/telephony/billingAccount/orderAlias/international/international.html
@@ -133,7 +133,7 @@
                         <telecom-telephony-billing-account-order-alias-number-choice
                             name="offerChoice"
                             data-ng-model="AliasOrderInternationalCtrl.form"
-                            data-ng-if="AliasOrderInternationalCtrl.prices"
+                            data-ng-if="AliasOrderInternationalCtrl.prices && !AliasOrderInternationalCtrl.loading.numbers"
                             data-choices="AliasOrderInternationalCtrl.predefinedNumbers"
                             data-prices="AliasOrderInternationalCtrl.prices"
                             data-type="geographical"
