feat(pci.storages.databases): datatr-46 datatr-82 - flex disks and custom disks (#8392)
DATATR-46 DATATR-82

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.scss
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/add.scss
@@ -1,3 +1,15 @@
-.order-summary {
-  z-index: 1009;
+pci-project-storages-databases-add {
+  .order-summary {
+    z-index: 1009;
+  }
+
+  oui-field.no-bottom-margin {
+    .oui-field {
+      margin-bottom: 0;
+    }
+  }
+
+  .oui-tile__description {
+    word-break: break-word;
+  }
 }
