feat(pack): add mention of the debit on migration pack and move offer
Ref #UXCT-463

Signed-off-by: Stephanie Moallic <stephanie.moallic@corp.ovh.com>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/offers/move-offers.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/offers/move-offers.html
@@ -918,6 +918,14 @@
                         </tr>
                     </tfoot>
                 </table>
+                <p
+                    class="mb-0"
+                    data-translate="telecom_pack_migration_offers_debit_mention_1"
+                ></p>
+                <p
+                    class="mb=0"
+                    data-translate="telecom_pack_migration_offers_debit_mention_2"
+                ></p>
             </div>
         </div>
     </div>
