--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/offers/pack-migration-offers.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/offers/pack-migration-offers.html
@@ -1029,6 +1029,14 @@
                             </tr>
                         </tfoot>
                     </table>
+                    <p
+                        class="mb-0"
+                        data-translate="telecom_pack_migration_offers_debit_mention_1"
+                    ></p>
+                    <p
+                        class="mb=0"
+                        data-translate="telecom_pack_migration_offers_debit_mention_2"
+                    ></p>
                 </div>
             </div>
         </div>
