--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/confirm/pack-migration-confirm.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/confirm/pack-migration-confirm.html
@@ -91,11 +91,11 @@
                                 ></td>
                             </tr>
                             <tr
-                                data-ng-if="$ctrl.process.selectedOffer.modemRental"
+                                data-ng-if="$ctrl.MODEM_LIST.includes($ctrl.process.selectedOffer.modem)"
                             >
                                 <th
                                     scope="row"
-                                    data-translate="telecom_pack_migration_confirm_modem_rental"
+                                    data-translate="{{'telecom_pack_migration_confirm_modem_rental_' + $ctrl.process.selectedOffer.modem}}"
                                     data-title="{{ 'telecom_pack_migration_confirm_header_entitled' | translate }}"
                                 ></th>
                                 <td
